--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="childrensFund">
   <head>
     <title>San Matteo Children's Fund</title>
   </head>
 <body>
+  <div ui-view="inputsView"></div>
 
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
