moved server out of /server; added comments to code

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,11 @@
     <title>San Matteo Children's Fund</title>
   </head>
 <body>
+
+  <!-- ui-router view -->
   <div ui-view="inputsView"></div>
 
+  <!-- dependencies -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
