--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,11 @@
 <body>
 
   <!-- ui-router view -->
-  <div ui-view="inputsView"></div>
+  <div ui-view="navMenuView"></div>
+
+
+  <div ui-view="middleView"></div>
+  
 
   <!-- dependencies -->
   <script src="bower_components/angular/angular.js"></script>
