Updated donorView.html to support multiple items, images, blurbls, and location data; updated menu with removal message; deprecated 'GET' button on worker and donor views

--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 
 
   <!-- dependencies -->
+  <link rel="stylesheet" href="/style.css">
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
