--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,8 @@
 
   <!-- ui-router view -->
   <div ui-view="navMenuView"></div>
-  <div ui-view="middleView"></div>
+  <div ui-view="firstView"></div>
+  <div ui-view="secondView"></div>
 
 
   <!-- dependencies -->
