--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
   <!-- dependencies -->
   <link rel="stylesheet" href="/style.css">
   <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="app.js"></script>
