Moved views into fold in template; changed name (Matteo --> Mateo);

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="childrensFund">
   <head>
-    <title>San Matteo Children's Fund</title>
+    <title>San Mateo Children's Fund</title>
   </head>
 <body>
 
