--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,12 @@
 
 
   <!-- dependencies -->
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="assets/stylesheets/style.css">
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/underscore/underscore.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
