UNSAFE COMMIT: Update routes with dummy endpoints, need to rewire with old functionality

--- a/client/index.html
+++ b/client/index.html
@@ -3,12 +3,14 @@
   <head>
     <title>San Mateo Children's Fund</title>
   </head>
-<body>
+<body ng-controller="appCtrl">
 
   <!-- ui-router view -->
-  <div ui-view="navMenuView"></div>
+<!--   <div ui-view="navMenuView"></div>
   <div ui-view="firstView"></div>
-  <div ui-view="secondView"></div>
+  <div ui-view="secondView"></div> -->
+
+  <div ui-view></div>
 
 
   <!-- dependencies -->
