Add 404 page and minor bugfix in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -15,14 +15,14 @@
 
   <!-- dependencies -->
   <link rel="stylesheet" href="assets/stylesheets/style.css">
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/underscore/underscore.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/directives.js"></script>
+  <script src="/bower_components/angular/angular.js"></script>
+  <script src="/bower_components/underscore/underscore.js"></script>
+  <script src="/bower_components/angular-route/angular-route.js"></script>
+  <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="/js/app.js"></script>
+  <script src="/js/controllers.js"></script>
+  <script src="/js/services.js"></script>
+  <script src="/js/directives.js"></script>
 </body>
 </html>
