Implement page protection using urlRouterProvider

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>San Mateo Children's Fund</title>
   </head>
-<body ng-controller="appCtrl">
+<body>
 
   <!-- ui-router view -->
 <!--   <div ui-view="navMenuView"></div>
