Protect account pages using resolves

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <a ui-sref="home" class="navbar-brand">Children's Fund</a>
+      <a ui-sref="home" class="navbar-brand">Developer Panel</a>
       <ul class="nav navbar-nav">
         <li><a ui-sref="cart">Cart</a></li>
         <li><a ui-sref="children">Children</a></li>
