--- a/client/index.html
+++ b/client/index.html
@@ -14,10 +14,10 @@
 
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <a ui-sref="home" class="navbar-brand">Developer Panel</a>
+      <a ui-sref="root" class="navbar-brand">Developer Panel</a>
       <ul class="nav navbar-nav">
         <!-- <li><a ui-sref="children">Children</a></li> -->
-        <li><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="root">/</a></li>
         <li><a ui-sref="workers.account">Worker Account</a></li>
         <li><a ui-sref="admin.account">Admin Account</a></li>
         <li><a ui-sref="helpDesk.account">Help Desk Account</a></li>
