--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>San Mateo Children's Fund</title>
     <link rel="stylesheet" href="/assets/stylesheets/style.css">
+    <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css">
   </head>
 <body ng-controller="appController">
@@ -31,11 +32,15 @@
 
 
   <!-- dependencies -->
+
+
+
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/underscore/underscore.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/services.js"></script>
