--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
   <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+  <script src="/js/cookies.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/controllers.js"></script>
   <script src="/js/services.js"></script>
