--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,8 @@
 
 
   <!-- dependencies -->
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/underscore/underscore.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
