--- a/client/index.html
+++ b/client/index.html
@@ -26,13 +26,16 @@
 
 
   <!-- dependencies -->
+    <!-- Image Upload Test -->
+    <script src="/bower_components/ng-file-upload/angular-file-upload-shim.js"></script> 
   <script src="/bower_components/angular/angular.js"></script>
+    <!-- Image Upload Test -->
+    <script src="/bower_components/ng-file-upload/angular-file-upload.js"></script> 
   <script src="/bower_components/underscore/underscore.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
-  <script src="/bower_components/ngUpload/ng-upload.js"></script>
   <script src="/js/cookies.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/controllers.js"></script>
