--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   </head>
 <body ng-controller="appController">
 
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+<!--   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <a ui-sref="root" class="navbar-brand">Developer Panel</a>
       <ul class="nav navbar-nav">
@@ -20,7 +20,7 @@
         <li><a href="#" ng-click="devSignin()">Master Signin</a></li>
       </ul>
     </div>
-  </nav>
+  </nav> -->
 
   <div class="container" ui-view></div>
 
