Update index.html to use new controller structure

--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,15 @@
   <script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
   <script src="/js/cookies.js"></script>
   <script src="/js/app.js"></script>
-  <script src="/js/controllers.js"></script>
+  <script src="/js/controllers/appController.js"></script>
+  <script src="/js/controllers/donorController.js"></script>
+  <script src="/js/controllers/usersController.js"></script>
+  <script src="/js/controllers/adminController.js"></script>
+  <script src="/js/controllers/authController.js"></script>
+  <script src="/js/controllers/signoutController.js"></script>
+  <script src="/js/controllers/workerController.js"></script>
+  <script src="/js/controllers/pledgeController.js"></script>
+  <script src="/js/controllers/imageController.js"></script>
   <script src="/js/services.js"></script>
   <script src="/js/directives.js"></script>
 </body>
