Break factories and services out + update index.html to reflect changes

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,13 @@
   <script src="/js/controllers/pledgeController.js"></script>
   <script src="/js/controllers/imageController.js"></script>
   <script src="/js/services.js"></script>
-  <script src="/js/directives.js"></script>
+  <script src="/js/factories/restful.js"></script>
+  <script src="/js/factories/oneTimeAuthorization.js"></script>
+  <script src="/js/factories/sessionCache.js"></script>
+  <script src="/js/factories/protect.js"></script>
+  <script src="/js/factories/signout.js"></script>
+  <script src="/js/services/childObjSaver.js"></script>
+  <script src="/js/services/sanitize.js"></script>
+  <script src="/js/services/randNum.js"></script>
 </body>
 </html>
