--- a/client/index.html
+++ b/client/index.html
@@ -23,8 +23,7 @@
   </nav> -->
 
   <div class="container-fluid" ui-view></div>
-
-
+  
   <!-- dependencies -->
   <script src="/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -36,6 +35,8 @@
   <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+  <script src="/js/compiled/application.js"></script>
+  <!--
   <script src="/js/cookies.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/controllers/appController.js"></script>
@@ -55,5 +56,6 @@
   <script src="/js/services/childObjSaver.js"></script>
   <script src="/js/services/sanitize.js"></script>
   <script src="/js/services/randNum.js"></script>
+  -->
 </body>
 </html>
