--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link href="/bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/assets/stylesheets/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
   </head>
 <body ng-controller="appController">
 
