--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html ng-app="childrensFund">
   <head>
     <title>San Mateo Children's Fund</title>
-    <link href="/bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" >
     <link rel="stylesheet" href="/assets/stylesheets/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300' rel='stylesheet' type='text/css'>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,100,300'  type='text/css'>
   </head>
 <body ng-controller="appController">
 
